--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "immutability-helper": "^3.0.1",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.4",
     "react-dnd": "^8.0.3",
     "react-dnd-html5-backend": "^8.0.3",
     "react-dom": "^16.8.6",
